welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:1: error: Missing closing brace `}' assumed here
var cpt = -1
^